--- a/dags/Interchange/Dockerfile
+++ b/dags/Interchange/Dockerfile
@@ -1,6 +1,8 @@
 # syntax=docker/dockerfile:1
 
-FROM python:3.6-buster
+#FROM python:3.6-buster
+
+FROM python:3.10.4-slim-buster
 
 USER root
 RUN apt-get update -y \
@@ -21,6 +23,20 @@ RUN useradd -ms /bin/bash airflow
 RUN groupadd docker
 RUN usermod -a -G docker airflow
 RUN usermod -aG docker airflow
+
+# --  Start add python dependencies
+
+#COPY requirements.txt requirements.txt
+COPY Dockerfile Dockerfile
+COPY interchange_app.py interchange_app.py
+
+#RUN pip install -r requirements.txt
+RUN pip3 install pandas
+RUN pip3 install -r https://raw.githubusercontent.com/snowflakedb/snowflake-connector-python/v2.7.6/tested_requirements/requirements_310.reqs
+RUN pip3 install snowflake-connector-python
+RUN pip3 install "snowflake-connector-python[secure-local-storage,pandas]"
+
+# --  End add python dependencies
 
 #RUN chmod 777 /var/run/docker.sock
 USER airflow
